feat: enhance vBook plugin system with JavaScript sandboxing and loader types